# ragnerock-sdk

./: .claudeignore  .gitignore  README.md  TODO.md  Taskfile.yml  pyproject.toml
.claude/: .gitignore  settings.json
.github/workflows/: main.yml  pr-checks.yml  pypi.yml
docs/: README.md  annotations.md  connecting.md  documents.md  errors.md  operators.md  queries.md  requirements.txt  sessions.md  workflows.md
docs/future/: google_auth.md
docs/source/: annotations.md  cli.md  conf.py  connecting.md  documents.md  index.md  jobs.md  manifests.md  operators.md  queries.md  sessions.md  workflows.md
examples/manifests/: annotation.yaml  document-group.yaml  document.yaml  operator.yaml  pipeline.yaml  workflow.yaml
integration/: README.md  conftest.py  test_annotations.py  test_auth.py  test_chunks_pages.py  test_document_groups.py  test_documents.py  test_jobs.py  test_operators.py  test_queries.py  test_workflows.py
ragnerock/: __init__.py  client.py  engine.py  errors.py  iterator.py  query_result.py  session.py
ragnerock/cli/: __init__.py  __main__.py  app.py  config.py  manifest.py  output.py  resources.py  session.py
ragnerock/resources/: __init__.py  annotation.py  (+8 more)
scripts/: check.sh  doc.sh  format.sh  lint.sh  run-cli-tests.sh  run-integration-tests.sh  run-unit-tests.sh
tests/: conftest.py  test_annotations.py  test_chunks.py  test_document_groups.py  test_documents.py  test_engine.py  test_errors.py  test_jobs.py  test_operators.py  test_pages.py  test_pagination.py  test_queries.py  test_session.py  test_transactions.py  test_workflows.py
(+54 files in other folders)
