[project]
name = "ragnerock"
version = "1.0.0"
description = "Python SDK for the Ragnerock API."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Ragnerock" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]

[project.scripts]
ragnerock = "ragnerock.cli.app:main"

[project.urls]
Homepage = "https://ragnerock.com"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.35",
    "pandas>=2.0",
    "sphinx>=9.1.0",
    "furo>=2024.8.6",
    "myst-parser>=5.0.0",
    "ruff>=0.15.11",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ragnerock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib --ignore=tests/integration"

[tool.pyright]
include = ["ragnerock", "tests"]

[[tool.pyright.executionEnvironments]]
root = "tests"
reportArgumentType = "none"
reportUnusedExpression = "none"
